correct alignment of progress screen and home screen

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
 .App {
   text-align: center;
   max-width: 425px;
-  width: 95%;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -30,16 +30,16 @@ body {
   margin-right: 10px;
   min-width: 100%;
   float: right;
-  max-width: 400px;
+  max-width: 425px;
   margin-top: 10px;
   height: 30px;
 }
 
 .logo-loading {
   /* display: inline-flex; */
-  margin-right: 10px;
-  min-width: 100%;
-  max-width: 400px;
+  /* margin-right: 10px; */
+  width: 100%;
+  max-width: 425px;
   margin-top: 10px;
   height: 30px;
 }
@@ -49,7 +49,7 @@ body {
   margin-top: 50px;
   margin-left: 10px;
   text-align: left;
-  max-width: 400px;
+  max-width: 425px;
   cursor: pointer;
 }
 
@@ -63,7 +63,7 @@ body {
   z-index: 999;
   background: #fcfcfc;
   width: 100%;
-  max-width: 400px;
+  max-width: 425px;
 }
 
 .search-input {
@@ -176,7 +176,7 @@ body {
   max-width: 80%;
 }
 .directory-div {
-  max-width: 400px;
+  max-width: 425px;
   width: 100%;
   margin-left: 20px;
   display: flex;
@@ -230,11 +230,7 @@ video::-webkit-media-controls-mute-button {
   width: 90%;
   text-align: center; 
 }
-@media screen and (max-width: 400px) {
-  .connect-button{
-    margin-left: 40px;
-  }
-}
+
 
 progress {
   border: none;
@@ -276,4 +272,5 @@ progress::-webkit-progress-bar {
   height: 50px;
   position: relative;
   margin-top: 25%;
+  color:#343434;
 }
